trip creator update

--- a/client/src/app/pages/tourist/tripDetails/tripDetails.component.html
+++ b/client/src/app/pages/tourist/tripDetails/tripDetails.component.html
@@ -3,7 +3,7 @@
       Trip details!
     </nb-card-header>
 </nb-card>
-<div class="row show-grid">
+<div class="row show-grid" *ngIf="details">
     <div class="col-12 col-sm-6 col-md-6">
         <nb-card>
             <nb-card-header>
