--- a/client/src/app/pages/tourist/addTrip/addTrip.component.html
+++ b/client/src/app/pages/tourist/addTrip/addTrip.component.html
@@ -21,10 +21,10 @@
             </nb-card-header>
             <nb-card-body>
                 <div class="input-group place">
-                    <input type="text" [(value)] ="tripName" placeholder="Trip name" class="form-control"/>
+                    <input type="text" [(ngModel)] ="tripName" placeholder="Trip name" class="form-control"/>
                 </div>
                 <div class="input-group place">
-                    <textarea rows="5" [(value)]="tripDescription"placeholder="Add some comments" class="form-control"></textarea>
+                    <textarea rows="5" [(ngModel)]="tripDescription"placeholder="Add some comments" class="form-control"></textarea>
                 </div>
                 <div class="row show-grid place" *ngFor="let place of selectedPlaces" >
                     <div class="col-5">
@@ -36,7 +36,7 @@
                     </div>
                 </div>
                 <div *ngIf="selectedPlaces.length > 0">
-                        <button class="btn btn-primary register">Register your trip!</button>
+                        <button (click)="registerTrip()" class="btn btn-primary register">Register your trip!</button>
                 </div>
             </nb-card-body>
         </nb-card>
