--- a/client/src/app/pages/user/userProfile.component.html
+++ b/client/src/app/pages/user/userProfile.component.html
@@ -1,6 +1,6 @@
 <nb-card>
     <nb-card-header>
-        {{user.username}}
+        {{username}}
     </nb-card-header>
     <nb-card-body>
         <div>
