--- a/client/src/app/pages/guide/trips/guideTrips.component.html
+++ b/client/src/app/pages/guide/trips/guideTrips.component.html
@@ -15,7 +15,7 @@
                 <button (click)="redirect(trip.tripId)" class="btn btn-primary info">Details</button>
             </div>
             <div class="col-2 col-md-2">
-                <button (click)="author(trip.author.name)" class="btn btn-primary info">{{trip.author.name}}</button>
+                <button (click)="author(trip.author.id)" class="btn btn-primary info">{{trip.author.name}}</button>
             </div>
             <div class="col-2 col-md-2">
                 <button (click)="removeDeclaration(trip.tripId)" class="btn btn-warning info">Remove declaration</button>
