--- a/client/src/app/pages/user/userProfile.compnent.scss
+++ b/client/src/app/pages/user/userProfile.compnent.scss
@@ -1,7 +1,7 @@
 .well {
     margin-top:-20px;
-    background-color:#007FBD;
-    border:2px solid #0077B2;
+    background-color:#007fbD;
+    border:2px solid #0077b2;
     text-align:center;
     cursor:pointer;
     font-size: 25px;
@@ -11,8 +11,8 @@
 
 .well:hover {
     margin-top:-20px; 
-    background-color:#0077B2;
-    border:2px solid #0077B2;
+    background-color:#0077b2;
+    border:2px solid #0077b2;
     text-align:center;
     cursor:pointer;
     font-size: 25px;
@@ -21,11 +21,7 @@
     border-bottom : 2px solid rgba(97, 203, 255, 0.65);
 }
 
-
-
-
-.bg_blur
-{
+.bg_blur {
     background-image:url('http://4.bp.blogspot.com/-cXPqQWpnt9g/UD8NEUVeICI/AAAAAAAAIy8/y1H3Ty1J4N4/s1600/Eiffel+Tower.jpg');
     height: 300px;
     background-size: cover;
@@ -38,13 +34,13 @@
     top: 42.5%;
     width: 35%;
     height: 15%;
-    background-color: #007FBE;
+    background-color: #007fbE;
     padding: 10px;
     padding-top: 6px;
     color: #fff;
     text-align: center;
     font-size: 20px;
-    border: 4px solid #007FBE;
+    border: 4px solid #007fbE;
 }
 
 .follow_btn:hover {
@@ -54,7 +50,7 @@
     top: 42.5%;
     width: 35%;
     height: 15%;
-    background-color: #007FBE;
+    background-color: #007fbE;
     padding: 10px;
     padding-top: 6px;
     color: #fff;
@@ -86,14 +82,14 @@
 
 .btn-style{
     color: #fff;
-    background-color: #007FBE;
+    background-color: #007fbE;
     border-color: #adadad;
     width: 33.3%;
 }
 
 .btn-style:hover {
     color: #333;
-    background-color: #3D5DE0;
+    background-color: #3d5de0;
     border-color: #adadad;
     width: 33.3%;
    
