--- a/client/src/app/pages/user/userProfile.compnent.scss
+++ b/client/src/app/pages/user/userProfile.compnent.scss
@@ -66,8 +66,9 @@
 }
 
 .picture{
-    height:150px;
-    width:150px;
+    max-height: 20vw;
+    height:150px !important;
+    width:150px !important;
     position:absolute;
     top: 75px;
     left:-75px;
