--- a/client/src/app/pages/dashboard/dashboard.component.html
+++ b/client/src/app/pages/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <div class="row">
   <nb-card>
     <nb-card-body>
-        <img src="assets/images/baner.png">
+        <img src="assets/images/logoo.png">
     </nb-card-body>
   </nb-card>
 
