--- a/client/src/app/pages/dashboard/dashboard.component.scss
+++ b/client/src/app/pages/dashboard/dashboard.component.scss
@@ -2,7 +2,10 @@
 
 @include nb-install-component() {
   img {
-      width: 100%;
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+      width: 20%;
       height: auto;
   }
   nb-card-body {
