--- a/client/src/app/@theme/components/header/header.component.html
+++ b/client/src/app/@theme/components/header/header.component.html
@@ -3,7 +3,7 @@
      [class.right]="position === 'inverse'">
   <div class="logo-containter">
     <a (click)="toggleSidebar()" href="#" class="navigation"><i class="nb-menu"></i></a>
-    <div class="logo" (click)="goToHome()">Uber<span>Travel</span></div>
+    <div class="logo" (click)="goToHome()" style="cursor: pointer;"><img src ="assets/images/greenpin.png" height="39">&nbsp;Uber<span>Travel</span></div>
   </div>
   <!-- <ngx-theme-switcher></ngx-theme-switcher> -->
 </div>
